2012-12-10  chalabi

	* DESCRIPTION: Updated 'Author' and added 'Imports' fields to
	  reflect third-party functions used in fRegression
	* NAMESPACE: Updated NAMESPACE
	* R/summary-methods.R: Fixed partial argument match
	* R/lmTest.R: Replaced built-in functions by calls to original
	  functions in lmtest package.
	* NAMESPACE: Added NAMESPACE
	* DESCRIPTION: Updated version number, maintainer field and 'Note'
	  fields

2011-09-23  mmaechler

	* DESCRIPTION: remove deprecated "LazyLoad" entry

2010-07-23  chalabi

	* inst/DocCopying.pdf: removed DocCopying.pdf license is already
	  specified in DESCRIPTION file

2009-09-30  chalabi

	* DESCRIPTION: updated version number

2009-09-29  chalabi

	* ChangeLog, DESCRIPTION: updated DESC and ChangeLog

2009-07-14  chalabi

	* man/RegressionTestsInterface.Rd: fixed equation in Rd

2009-04-02  chalabi

	* DESCRIPTION: more explicit depends and suggests field in DESC
	  file.

2009-04-01  chalabi

	* R/regFit.R: regFit data arg is coerced to a data.frame when
	  calling underlying method
	* DESCRIPTION: updated DESC file

2009-01-28  chalabi

	* man/fREG-class.Rd, man/plot-methods.Rd, man/regFit.Rd,
	  man/regSim.Rd: updated manual pages to new Rd parser
