@@ -1,5 +1,5 @@
-2a459bf44cbf7e5ea9de468e0bf06251 *ChangeLog
-eefe001cf4abd876eedc829df9375bda *DESCRIPTION
+dad72f57caf7b37273a9c7e2f6943a72 *ChangeLog
+675f1a6cd333f5c5b2011f3f24757b7f *DESCRIPTION
 c6a3d240be833f32a6ca5a33994ff6cb *NAMESPACE
 056fea650d95be1831ed8667a3950b45 *R/coef-methods.R
 c54e44657bcce48c23025b791e89216c *R/fREG-class.R
@@ -18,7 +18,7 @@ b2580cec9f2cd521d39d049ce0760c46 *R/summary-methods.R
 099970cbbcea3bacdead07f7b728d959 *R/termPlot-methods.R
 1dc22bb42d71abdb4c8b7acfb8d1025d *R/terms-methods.R
 4a393ea28c1acc2e4d3e16eb5328ce28 *R/vcov-methods.R
-39c42fc0560c4aa5e174f865fbafa15d *R/zzz.R
+e3ac35e5c846b78cc60cdeaf5b9e143b *R/zzz.R
 6042b9c5e5bec3ecc1b6959cd2858b64 *inst/COPYRIGHT.html
 5f16a6861f06eddcf85d0a26ef916d6d *inst/unitTests/Makefile
 8e6c3efa2d826d92c1d21a95432e7c20 *inst/unitTests/runTests.R
@@ -46,6 +46,6 @@ dcfa7e8000381f2870a1263edf4846d2 *man/termPlot-methods.Rd
 a81b94c32434535579a59cd5e71a7ae7 *man/terms-methods.Rd
 c912dfe0b8d81577309779ac220a708f *man/vcov-methods.Rd
 7ba97abe7e0c4c5b73583d0ce48e7cbb *src/LmTests.f
-1d848c9e918f0eafbb64d4aa0e593e78 *src/Makevars
+3996e7c16bfb96fad295ee425815cb4d *src/Makevars
 624e949f55eafa4911000ea92736445e *src/MarsModelling.f
 ca566e590ec30abd0718c5375e1a446f *tests/doRUnit.R
