@@ -29,20 +29,20 @@
 ################################################################################
 
 
-.First.lib =
-function(lib, pkg)
-{
-    # Startup Mesage and Desription:
-    MSG <- if(getRversion() >= "2.5") packageStartupMessage else message
-    dsc <- packageDescription(pkg)
-    if(interactive() || getOption("verbose")) {
-        # not in test scripts
-        MSG(sprintf("Rmetrics Package %s (%s) loaded.", pkg, dsc$Version))
-    }
+## .First.lib =
+## function(lib, pkg)
+## {
+##     # Startup Mesage and Desription:
+##     MSG <- if(getRversion() >= "2.5") packageStartupMessage else message
+##     dsc <- packageDescription(pkg)
+##     if(interactive() || getOption("verbose")) {
+##         # not in test scripts
+##         MSG(sprintf("Rmetrics Package %s (%s) loaded.", pkg, dsc$Version))
+##     }
 
-    # Load dll:
-    library.dynam("fRegression", pkg, lib)
-}
+##     # Load dll:
+##     library.dynam("fRegression", pkg, lib)
+## }
 
 
 if(!exists("Sys.setenv", mode = "function")) # pre R-2.5.0, use "old form"
@@ -50,4 +50,3 @@ if(!exists("Sys.setenv", mode = "function")) # pre R-2.5.0, use "old form"
 
 
 ################################################################################
-
